## Process this file with automake to produce Makefile.in

#
# Contains only test documents
#

EXTRA_DIST =	\
	bug-1-.xml \
	bug-2-.xml \
	bug-3-.xml \
	bug-4-.xml \
	bug-5-.xml \
	bug-6-.xml \
	bug-7-.xml \
	bug-8-.xml \
	bug-9-.xml \
	bug-10-.xml \
	bug-11-.xml \
	bug-12-.xml \
	bug-13-.xml \
	bug-14-.xml \
	bug-15-.xml \
	bug-16-.xml \
	bug-17-.xml \
	bug-18-.xml \
	bug-19-.xml \
	bug-20-.xml \
	bug-21-.xml \
	bug-22-.xml \
	bug-23-.xml \
	bug-24-.xml \
	bug-25-.xml \
	bug-26-.xml \
	bug-27-.xml \
	bug-28-.xml \
	bug-29-.xml bug-29-.ent \
	bug-30-.xml \
	bug-31-.xml \
	bug-32-.xml \
	bug-33-.xml \
	bug-35-.xml \
	bug-36-.xml \
	bug-37-.xml \
	bug-38-.xml \
	bug-39-.xml \
	bug-40-.xml \
	bug-41-.xml \
	bug-42-.xml \
	bug-43-.xml \
	bug-44-.xml \
	bug-45-.xml \
	bug-46-.xml \
	bug-47-.xml \
	bug-48-.xml \
	bug-49-.xml \
	bug-50-.xml \
	bug-52.xml \
	bug-53.xml \
	bug-54.xml \
	bug-55.xml \
	bug-56.xml \
	bug-57.xml \
	bug-59.xml \
	bug-60.xml \
	bug-61.xml \
	bug-62.xml \
	bug-63.xml \
	bug-64.xml \
	bug-65.xml \
	bug-66.xml \
	bug-68.xml \
	bug-69.xml \
	bug-70.xml \
	bug-71.xml \
	bug-72.xml \
	bug-73.xml \
	bug-74.xml \
	bug-75.xml \
	bug-76.xml \
	character.xml \
	array.xml \
	items.xml

